--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Admin Penal",
-  "name": "Admin Penal",
+  "short_name": "PaymentHub",
+  "name": "PaymentHub",
   "icons": [
     {
       "src": "favicon.ico",
