--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^2.17.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.11.0",
