--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "8.5.1",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
+    "nanoid": "^4.0.2",
     "nodemon": "^2.0.20"
   }
 }
