--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "country-iso-2-to-3": "^1.1.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "8.5.1",
