--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-# REACT_APP_BASE_URL=https://paymenthub.uk/api
-REACT_APP_BASE_URL=http://localhost:5001/api
+REACT_APP_BASE_URL=https://paymenthub.uk/api
+# REACT_APP_BASE_URL=http://localhost:5001/api
